--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "ava": "^0.22.0",
     "eslint": "^4.7.2",
-    "eslint-config-astur": "0.0.2"
+    "eslint-config-astur": "0.0.2",
+    "pem": "^1.12.5",
+    "scra": "^0.2.7"
   },
   "keywords": [
     "mockser"
