--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "ava": "^0.25.0",
     "eslint": "^4.7.2",
     "eslint-config-astur": "0.0.2",
+    "got": "^8.3.1",
     "nyc": "^12.0.2",
-    "pem": "^1.12.5",
-    "scra": "^0.2.7"
+    "pem": "^1.12.5"
   },
   "keywords": [
     "test",
